# air

./: .dockerignore  .env.example  .env.production.template  .gitignore  Makefile  README.md  docker-compose.yml
apps/api/: README.md  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/admin/: __init__.py  router.py
apps/api/app/ai/: __init__.py  router.py
apps/api/app/auth/: __init__.py  dependencies.py  router.py  schemas.py
apps/api/app/billing/: __init__.py  router.py  tokens.py
apps/api/app/core/: __init__.py  crypto.py  db.py  email.py  jobs.py  log_mask.py  rate_limit.py  redis.py  security.py  settings.py
apps/api/app/crm/: __init__.py  external_router.py  mock_data.py  oauth_router.py  router.py  schemas.py  single_connection.py
apps/api/app/dashboards/: __init__.py  builder.py  router.py
apps/api/app/db/: __init__.py  url_translate.py
apps/api/app/db/migrations/: __init__.py  alembic.ini
apps/api/app/db/migrations/main/: env.py
apps/api/app/db/migrations/main/versions/: 0001_initial_main.py  0003_pull_amocrm_job_kind.py  (+8 more)
apps/api/app/db/migrations/tenant/: env.py  script.py.mako
apps/api/app/db/models/: __init__.py  _helpers.py  base.py  enums.py  main_schema.py  tenant_schema.py
apps/api/app/email_connections/: __init__.py  router.py
apps/api/app/jobs/: __init__.py  router.py
apps/api/app/notifications/: router.py
apps/api/app/telegram/: __init__.py  client.py  router.py
apps/api/app/users/: __init__.py  router.py
apps/api/app/workspaces/: router.py
apps/worker/: README.md  pyproject.toml
apps/worker/worker/: __init__.py  main.py  scheduler.py
apps/worker/worker/jobs/: __init__.py  _common.py  ai.py  audit.py  billing.py  crm.py  crm_pull.py  delete.py  email_pull.py  export.py  retention.py
apps/worker/worker/lib/: __init__.py  amocrm_creds.py  crypto.py  db.py  fixtures.py  log_mask.py  logger.py  queues.py  tenant.py  url_translate.py
(+251 files in other folders)
