[project]
name = "code9-worker"
version = "0.1.0"
description = "Code9 Analytics — фоновый worker (RQ)"
requires-python = ">=3.11"
dependencies = [
  "rq>=1.16,<2",
  "redis>=5,<6",
  "sqlalchemy>=2.0,<2.1",
  "alembic>=1.13,<2",
  "asyncpg>=0.29,<0.31",
  "psycopg2-binary>=2.9,<3",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.3,<3",
  "cryptography>=42,<44",
  "argon2-cffi>=23.1,<24",
  "httpx>=0.27,<0.29",
  "structlog>=24,<25",
  "python-dateutil>=2.9,<3"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5,<0.9",
  "mypy>=1.10,<2",
  "pytest>=8,<9"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["worker*"]
